# BevyCreatures

./: Cargo.toml  README.md
src/: brain.rs  creature.rs  main.rs  utils.rs  world.rs
