[package]
name = "BevyCreatures"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

# Enable only a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
ndarray = ">=0.15"
ndarray-rand = ">=0.14"
rand = ">=0.8"
rand_distr = ">=0.4"
bevy_prototype_debug_lines = ">=0.10"
serde = ">=1.0"
serde_yaml = ">=0.9"
num = ">=0.4"

[dependencies.bevy]
version = ">=0.10"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    # Bevy functionality:
    #    "animation",          # Animation support
    "bevy_asset",
    #    "bevy_gilrs",         # Gamepad input support
    #    "bevy_audio",         # Builtin audio
    "bevy_winit",         # Window management
    "x11",                # Linux: Support X11 windowing system
    #    "filesystem_watcher", # Asset hot-reloading
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit

    # File formats:
    "png",
]